Describe packer-web

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -546,6 +546,53 @@ Samo ostvarenje oslanja se na nekoliko pomoćnih biblioteka. Za definiranje koma
 
 Alat je ostvaren u tri razreda. Pomoćni razred {\textit{RemoteLogger}} služi za komunikaciju sa udaljenom uslugom za prikupljanje rezultata. Skripta {\textit{PackerCli}} služi kao ulazna točka u program i predstavlja definiciju komandnolinijskog sučelja. Konačno, razred {\textit{Packer}} sadrži algoritam za pakiranje ulaznih definicija u izvršne slike.
 
+\subsubsection{Web sučelje prema alatu za pakiranje}
+
+Kako bi omogućili jednostavnije korištenje napravljenog alata, oko njega smo napravili omotač koji za njega izlaže programsko sučelje preko protokola HTTP. Njega smo također ostvarili pomoću programskog okvira {\textit{Spring}}, a ono izlaže jednu krajnju točku koja preko POST zahtjeva prima ZIP datoteku koja sadrži ulaznu definiciju programa, lokaciju usluge za praćenje rezultata, naziv zadatka te naziv temeljne slike nad kojom će biti izgrađene izvršne slike. Kako je alat za pakiranje napravljen prvenstveno kao biblioteka koju koristi komandnolinijska aplikacija, implementiranje omotača svelo se na proslijeđivanje zahtjeva toj biblioteci. Implpementaciju cijelog omotača ostvarili smo u jednom {\textit{Controlleru}} te Spring Boot pokretačkoj skripti. Ostvarenje {\textit{Controllera}} slijedi kako bi ilustrirali jednostavnost korištenja ostvarene biblioteke:
+
+\begin{lstlisting}
+package hr.fer.zemris.sandworm.packer.web
+
+import hr.fer.zemris.sandworm.packer.Packer
+import hr.fer.zemris.sandworm.packer.RemoteLogger
+import net.lingala.zip4j.core.ZipFile
+import org.springframework.web.bind.annotation.PostMapping
+import org.springframework.web.bind.annotation.RequestParam
+import org.springframework.web.bind.annotation.RestController
+import org.springframework.web.multipart.MultipartFile
+import java.nio.file.Files
+
+@RestController
+class MainController {
+
+    @PostMapping("/")
+    fun pack(
+            @RequestParam file: MultipartFile,
+            @RequestParam loggerEndpoint: String,
+            @RequestParam taskId: String,
+            @RequestParam baseImage: String
+    ) {
+        val outputDirectory = Files.createTempDirectory("packer").toFile()
+        val temporaryFile = Files.createTempFile("packer", null).toFile()
+
+        try {
+            file.transferTo(temporaryFile)
+            ZipFile(temporaryFile).extractAll(outputDirectory.absolutePath)
+
+            Packer(RemoteLogger(taskId, loggerEndpoint)).pack(
+                    outputDirectory,
+                    baseImage,
+                    taskId
+            )
+        } finally {
+            outputDirectory.deleteRecursively()
+            temporaryFile.delete()
+        }
+    }
+
+}
+\end{lstlisting}
+
 \subsection{Servis za zakazivanje izvođenja i upravljanje radilicama}
 
 \subsection{Dijeljeni registar Docker slika}
